--- a/Visual Element Assets/MinorBadge.uxml
+++ b/Visual Element Assets/MinorBadge.uxml
@@ -1,3 +1,3 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:Label tabindex="-1" text="com.hibzz.definemanager" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Text" style="padding-right: 4px; padding-left: 4px; padding-top: 2px; padding-bottom: 2px; background-color: rgb(177, 54, 54); font-size: 10px; -unity-text-align: middle-center; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; border-bottom-left-radius: 2px; margin-left: 2px; margin-right: 2px;" />
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
+    <ui:Label tabindex="-1" text="public" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Text" style="padding-right: 4px; padding-left: 4px; padding-top: 4px; padding-bottom: 4px; background-color: rgb(152, 45, 45); font-size: 10px; -unity-text-align: middle-center; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; border-bottom-left-radius: 2px; margin-left: 2px; margin-right: 2px;" />
 </ui:UXML>
