--- a/Visual Element Assets/ReflectionToolkitWindow.uxml
+++ b/Visual Element Assets/ReflectionToolkitWindow.uxml
@@ -6,6 +6,6 @@
             <ui:VisualElement name="WarningIcon" style="flex-grow: 0; width: 15px; flex-shrink: 0; align-items: auto; align-self: center; flex-direction: row; height: 15px; background-image: url(&apos;project://database/Assets/UnityDefaultRuntimeTheme.tss?fileID=4584671053970592468&amp;guid=0dc747c4b2322c94d8d0dfaf3bdb98dd&amp;type=3#console.warnicon&apos;); display: none; justify-content: flex-end; opacity: 1; position: absolute; left: 100%; margin-left: -20px;" />
         </ui:TextField>
         <ui:VisualElement name="BadgeContainer" style="flex-grow: 0; flex-direction: row; height: auto; margin-top: 5px; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; flex-wrap: wrap; display: flex;" />
-        <ui:ListView name="Results" class="section" style="flex-grow: 1;" />
+        <ui:ListView name="Results" virtualization-method="DynamicHeight" class="section" style="flex-grow: 1;" />
     </ui:VisualElement>
 </ui:UXML>
